# agb_new_with_sqlalchemy

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
agb-application/: .env  .env.template  Dockerfile  alembic.ini  docker-entrypoint.sh  log.ini  main.py  requirements.txt
agb-application/alembic/: env.py
agb-application/alembic/versions/: 2025_01_23_1353-03342977d10b_create_users_table.py  2025_01_23_1420-fa32c6f8f0dd_create_users_table.py  2025_01_23_1450-449147e9acf4_create_users_1.py  2025_01_23_1559-8d849da98254_create_users_states.py  2025_01_23_1600-e0d98a4bf7ca_create_users_states.py  2025_01_24_1020-48adeeb82bb5_create_metiz_table.py  2025_01_24_1520-d0299c5ca509_create_other_table.py  2025_01_24_1523-2698c7ed6095_create_all_other_table.py  2025_01_27_1425-4b08cdd58592_additional_fields_on_users_model.py  2025_01_29_1156-0348bab29972_reformat_drawing_table.py  2025_01_31_1451-d0c0a7d63551_generate_tables.py  2025_02_10_0952-64b08b2d80f2_adding_fio_and_image_fields_to_user_.py  2025_02_10_1008-cab35eff2b51_adding_age_field_to_user_model.py
agb-application/api/: __init__.py
agb-application/api/api_v1/: __init__.py  dependencies.py  metizes.py  users.py
agb-application/core/: config.py  loging_config.py  user.py
agb-application/core/models/: RWD.py  __init__.py  according_to_the_drawing.py  (+8 more)
agb-application/templates/: adapters.html  addnew.html  adm.html  after_delete.html  authuser.html  base.html  base_header_and_footer.html  fake_start.html  hydroperfs.html  main.css  metizes.html  patch.html  start.html
agb-application/utils/: consts.py
(+149 files in other folders)
